mount /processing volume under spark-master container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - '7077:7077' # communication with worker
     environment:
       SPARK_MODE: master
+    volumes:
+      - ./processing:/opt/bitnami/spark/processing 
 
   spark-worker:
     image: "bitnamilegacy/spark:3.5.0"
