--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD} 
       POSTGRES_DB: ${DB_NAME} 
+    env_file:
+      - .env
     ports:
       - '5432:5432'
     volumes:
